<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <artifactId>otus_java_2019_12</artifactId>
    <groupId>ru.otus</groupId>
    <version>1.0-SNAPSHOT</version>

    <modules>
        <module>hw01-maven</module>
        <module>hw02-myArrayList</module>
        <module>hw09-annotations</module>
        <module>hw15-myGsonWriter</module>
    </modules>

    <developers>
        <developer>
            <id>gvasiliev</id>
            <name>Gleb Vasiliev</name>
            <email>vasiliev.g.i@gmail.com</email>
            <roles>
                <role>developer</role>
            </roles>
            <timezone>Europe/Moscow</timezone>
        </developer>
    </developers>

    <name>otus_java_2019_12</name>

    <packaging>pom</packaging>
    <!-- FIXME change it to the project's website
    <url>http://www.example.com</url>  -->

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>13</maven.compiler.source>
        <maven.compiler.target>13</maven.compiler.target>
        <com.google.guava.version>28.1-jre</com.google.guava.version>
        <maven-surefire-plugin.version>3.0.0-M3</maven-surefire-plugin.version>
        <junit-jupiter-engine.version>5.5.2</junit-jupiter-engine.version>
        <org.apache.maven.plugins.maven-assembly-plugin.version>3.2.0</org.apache.maven.plugins.maven-assembly-plugin.version>
        <com.google.code.gson.version>2.8.6</com.google.code.gson.version>

    </properties>

    <dependencyManagement>

        <dependencies>
            <!-- https://mvnrepository.com/artifact/com.google.guava/guava -->
            <dependency>
                <groupId>com.google.guava</groupId>
                <artifactId>guava</artifactId>
                <version>${com.google.guava.version}</version>
            </dependency>

            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter-engine</artifactId>
                <version>${junit-jupiter-engine.version}</version>
                <scope>test</scope>
            </dependency>

            <dependency>
                <groupId>com.google.code.gson</groupId>
                <artifactId>gson</artifactId>
                <version>${com.google.code.gson.version}</version>
            </dependency>

        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
            <plugins>
                <!-- clean lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#clean_Lifecycle -->
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-assembly-plugin</artifactId>
                    <version>${org.apache.maven.plugins.maven-assembly-plugin.version}</version>

                </plugin>

                <plugin>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>${maven-surefire-plugin.version}</version>
                    <configuration>
                        <argLine>--enable-preview</argLine>
                    </configuration>
                </plugin>

            </plugins>
        </pluginManagement>
    </build>
</project>